--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </section>
     </main>
     <footer></footer>
+    <!-- test -->
 
     <script type="module" src="/bestsellers.js"></script>
     <script src="./header_footer.js"></script>
