--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </main>
     <footer></footer>
     <!-- test -->
+     <!-- test -->
 
     <script type="module" src="/bestsellers.js"></script>
     <script src="./header_footer.js"></script>
