all brands added

--- a/catalog/index.html
+++ b/catalog/index.html
@@ -247,7 +247,7 @@
       <div class="cards-container">
 
       </div>
-      <p id="no-products-msg" style="display:none;">Немає товарів за вибраними фільтрами.</p>
+      <p id="no-products-msg" class="noto-sans-dd-title" style="display:none;">Немає товарів за вибраними фільтрами.</p>
     </section>
   </main>
 
