--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Kirito Cloth</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    </head>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet">
+</head>
+
 <body>
     <main>
         <section class="main-bg">
@@ -21,11 +25,35 @@
         <section class="popular-brands">
             <h2 class="noto-sans-h2">Популярні бренди</h2>
             <div class="popular-brands-wrap">
-                <a href="" class="underline-animated">
+                <a href="./catalog/?brand=Balenciaga" class="underline-animated">
                     <img src="/img/logotypes/balenciaga_logo.svg" alt="">
                 </a>
-                <a href="" class="underline-animated">
+                <a href="./catalog/?brand=Vetements" class="underline-animated">
                     <img src="/img/logotypes/vetements_logo.png" alt="">
+                </a>
+                <a href="./catalog/?brand=Rick+Owens" class="underline-animated">
+                    <img src="/img/logotypes/rick_owens_logo.svg" alt="">
+                </a>
+                <a href="./catalog/?brand=Acne+Studios" class="underline-animated">
+                    <img src="/img/logotypes/acne_studios_logo.svg" alt="">
+                </a>
+                <a href="./catalog/?brand=Maison+Margiela" class="underline-animated">
+                    <img src="/img/logotypes/maison_margiela_logo.svg" alt="">
+                </a>
+                <a href="./catalog/?brand=Enfants+Riches+Deprimes" class="underline-animated">
+                    <img src="/img/logotypes/erd_logo.svg" alt="">
+                </a>
+                <a href="./catalog/?brand=Project+GR" class="underline-animated">
+                    <img src="/img/logotypes/project_gt_logo.png" alt="">
+                </a>
+                <a href="./catalog/?brand=Number+Nine" class="underline-animated">
+                    <img src="/img/logotypes/number_nine_logo.png" alt="">
+                </a>
+                <a href="./catalog/?brand=Mastermind" class="underline-animated">
+                    <img src="/img/logotypes/mastermind_logo.png" alt="">
+                </a>
+                <a href="./catalog/?brand=Undercover" class="underline-animated">
+                    <img src="/img/logotypes/undercover_logo.svg" alt="">
                 </a>
             </div>
             <p class="noto-sans-soon">Скоро більше...</p>
@@ -34,11 +62,23 @@
         <section class="desired-categories">
             <h2 class="noto-sans-h2">Найбажаніші категорії</h2>
             <div class="desired-categories-wrap">
-                <a href="" class="desired-category noto-sans-body">
+                <a href="./catalog/?type=tee" class="desired-category noto-sans-body">
                     <div class="desired-categories-img">
                         <img class='animated' src="/img/categories/tee.png" alt="">
-                    </div>                   
+                    </div>
                     <p class="desired-category-title underline-animated">Футболки</p>
+                </a>
+                <a href="./catalog/?type=tank" class="desired-category noto-sans-body">
+                    <div class="desired-categories-img">
+                        <img class='animated' src="/img/categories/tee.png" alt="">
+                    </div>
+                    <p class="desired-category-title underline-animated">Майки</p>
+                </a>
+                <a href="./catalog/?type=shorts" class="desired-category noto-sans-body">
+                    <div class="desired-categories-img">
+                        <img class='animated' src="/img/categories/tee.png" alt="">
+                    </div>
+                    <p class="desired-category-title underline-animated">Шорти</p>
                 </a>
             </div>
             <p class="noto-sans-soon">Скоро більше...</p>
@@ -50,11 +90,10 @@
         </section>
     </main>
     <footer></footer>
-    <!-- test -->
-     <!-- test -->
 
     <script type="module" src="/bestsellers.js"></script>
     <script src="./header_footer.js"></script>
 
 </body>
+
 </html>
