--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                 <a href="./catalog/?brand=Enfants+Riches+Deprimes" class="underline-animated">
                     <img src="/img/logotypes/erd_logo.svg" alt="">
                 </a>
-                <a href="./catalog/?brand=Project+GR" class="underline-animated">
-                    <img src="/img/logotypes/project_gt_logo.png" alt="">
-                </a>
-                <a href="./catalog/?brand=Number+Nine" class="underline-animated">
-                    <img src="/img/logotypes/number_nine_logo.png" alt="">
-                </a>
                 <a href="./catalog/?brand=Mastermind" class="underline-animated">
                     <img src="/img/logotypes/mastermind_logo.png" alt="">
                 </a>
                 <a href="./catalog/?brand=Undercover" class="underline-animated">
                     <img src="/img/logotypes/undercover_logo.svg" alt="">
+                </a>
+                <a href="./catalog/?brand=Project+GR" class="underline-animated">
+                    <img src="/img/logotypes/project_gt_logo.png" alt="">
+                </a>
+                <a href="./catalog/?brand=Number+Nine" class="underline-animated">
+                    <img src="/img/logotypes/number_nine_logo.png" alt="">
                 </a>
             </div>
             <p class="noto-sans-soon">Скоро більше...</p>
@@ -89,7 +89,49 @@
             <div class="cards-container"></div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-wrapper">
+            <div class="icons">
+                <img src="/img/kirito_logo.png" alt="Kirito Brand Logo" class="kirito-logo">
+                <div class="social-media">
+                    <a href="" class="animated">
+                        <img src="/img/icons/instagram.svg" alt="">
+                    </a>
+                    <a href="" class="animated">
+                        <img src="/img/icons/telegram.svg" alt="">
+                    </a>
+                    <a href="" class="animated">
+                        <img src="/img/icons/tiktok.svg" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="info">
+                <h4 class="noto-sans-dd-title">МЕНЮ</h4>
+                <a href="" class="noto-sans-dd">Головна</a>
+                <a href="" class="noto-sans-dd">Каталог</a>
+                <a href="" class="noto-sans-dd">Про нас</a>
+            </div>
+            <div class="info">
+                <h4 class="noto-sans-dd-title">СЕРВІС</h4>
+                <a href="" class="noto-sans-dd">Про наш продукт</a>
+                <a href="" class="noto-sans-dd">Оплата</a>
+                <a href="" class="noto-sans-dd">Доставка</a>
+                <a href="" class="noto-sans-dd">Реферальна система та знижки</a>
+            </div>
+            <div class="info">
+                <h4 class="noto-sans-dd-title">КОНТАКТИ</h4>
+                <a href="" class="noto-sans-dd">Telegram</a>
+                <a href="" class="noto-sans-dd">Instagram</a>
+            </div>
+            <div class="info">
+                <h4 class="noto-sans-dd-title">МОВА</h4>
+                <a href="" class="noto-sans-dd">Українська</a>
+                <a href="" class="noto-sans-dd">Російська</a>
+                <a href="" class="noto-sans-dd">Англійська</a>
+            </div>
+        </div>
+
+    </footer>
 
     <script type="module" src="/bestsellers.js"></script>
     <script src="./header_footer.js"></script>
