--- a/catalog/index.html
+++ b/catalog/index.html
@@ -247,7 +247,11 @@
       <div class="cards-container">
 
       </div>
-      <p id="no-products-msg" class="noto-sans-dd-title" style="display:none;">Немає товарів за вибраними фільтрами.</p>
+      <div id="no-products-msg">
+        <p class="noto-sans-dd-title">Немає товарів за вибраними фільтрами.</p>
+        <a class="noto-sans-dd" href="/catalog/">Скинути всі</a>
+      </div>
+      
     </section>
   </main>
 
