--- a/catalog/index.html
+++ b/catalog/index.html
@@ -196,7 +196,7 @@
       <div class="filter-group" id="filter-group-price">
         <div class="filters-wrap-title">
           <div>
-            <p class="noto-sans-dd-title">Ціна</p>
+            <p class="noto-sans-dd-title"></p>
           </div>
           <button class="close-filter-group">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -214,7 +214,7 @@
             <div id="thumbMin" class="slider-thumb"></div>
             <div id="thumbMax" class="slider-thumb"></div>
           </div>
-          <button id="apply-price-btn" class="apply-filter-btn animated">Застосувати</button>
+          <button id="apply-price-btn" class="apply-filter-btn animated"></button>
         </div>
 
       </div>
@@ -254,7 +254,8 @@
       
     </section>
   </main>
-
+  
+  <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
   <script src="/header_footer.js"></script>
   <script type="module" src="/catalog.js"></script>
 </body>
