--- a/catalog/index.html
+++ b/catalog/index.html
@@ -196,7 +196,7 @@
       <div class="filter-group" id="filter-group-price">
         <div class="filters-wrap-title">
           <div>
-            <p class="noto-sans-dd-title"></p>
+            <p class="noto-sans-dd-title">Ціна</p>
           </div>
           <button class="close-filter-group">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
