--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </main>
 
     <script type="module" src="/bestsellers.js"></script>
-    <script src="./header_footer.js"></script>
+    <script type="module" src="/header_footer.js"></script>
 
 </body>
 
