--- a/product/index.html
+++ b/product/index.html
@@ -98,7 +98,7 @@
 
     </main>
     <script src="/acordeon.js"></script>
-    <script src="/header_footer.js"></script>
+    <script type="module" src="/header_footer.js"></script>
     <script type="module" src="/script.js"></script>
 </body>
 
