--- a/us.html
+++ b/us.html
@@ -52,7 +52,7 @@
             </ol>
         </section>
 </main>
-  <script src="/header_footer.js"></script>
+  <script type="module" src="/header_footer.js"></script>
 </body>
 
 </html>
