--- a/catalog/index.html
+++ b/catalog/index.html
@@ -192,11 +192,11 @@
             Бежевий
           </label><br />
 
-          <label class="custom-checkbox" data-color="#483C32">
+          <label class="custom-checkbox" data-color="#964B00">
             <input type="checkbox" name="color" value="taupe" />
             <span class="checkmark"></span>
             <div class="color-dot"></div>
-            Сіро-коричневий
+            Коричневий
           </label><br />
 
           <label class="custom-checkbox" data-color="red">
