--- a/catalog/index.html
+++ b/catalog/index.html
@@ -193,7 +193,7 @@
           </label><br />
 
           <label class="custom-checkbox" data-color="#964B00">
-            <input type="checkbox" name="color" value="taupe" />
+            <input type="checkbox" name="color" value="brown" />
             <span class="checkmark"></span>
             <div class="color-dot"></div>
             Коричневий
