better main page

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             <p class="noto-sans-soon">Скоро більше...</p>
         </section>
 
+        <section class="recently-viewed">
+            <h2 class="noto-sans-h2">Нещодавно переглянуті</h2>
+            <div class="cards-container"></div>
+        </section>
+
         <section class="desired-categories">
             <h2 class="noto-sans-h2">Найбажаніші категорії</h2>
             <div class="desired-categories-wrap">
@@ -71,13 +76,13 @@
                 </a>
                 <a href="./catalog/?type=tank" class="desired-category noto-sans-body">
                     <div class="desired-categories-img">
-                        <img class='animated' src="/img/categories/tee.png" alt="">
+                        <img class='animated' src="/img/categories/tank.png" alt="">
                     </div>
                     <p class="desired-category-title underline-animated">Майки</p>
                 </a>
                 <a href="./catalog/?type=shorts" class="desired-category noto-sans-body">
                     <div class="desired-categories-img">
-                        <img class='animated' src="/img/categories/tee.png" alt="">
+                        <img class='animated' src="/img/categories/shorts.png" alt="">
                     </div>
                     <p class="desired-category-title underline-animated">Шорти</p>
                 </a>
