--- a/en/product/index.html
+++ b/en/product/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -20,92 +20,89 @@
         <section class="item">
             <div class="item-img-wrap"></div>
             <div class="item-info-wrap">
-                <span class="ready-deliver noto-sans-item-details-content">Готове до відправлення</span>
+                <span class="ready-deliver noto-sans-item-details-content">Ready to ship</span>
                 <h1 class="clash-grotesk-item-title" id="item-title"></h1>
                 <p class="outfit-item-price" id="item-price"></p>
                 <p class="outfit-item-size" id="item-sizes"></p>
-                <a target="_blank" href="https://t.me/kirito_ls" class="main-btn noto-sans-header animated">Придбати</a>
+                <a target="_blank" href="https://t.me/kirito_ls" class="main-btn noto-sans-header animated">Buy</a>
                 <div class="item-details-wrap">
                     <div class="item-details">
                         <div class="item-details-title noto-sans-item-details-title">
-                            <p>Заміри</p>
+                            <p>Measurements</p>
                             <img src="/img/arrow.svg" alt="">
                         </div>
                         <div class="item-details-content noto-sans-item-details-content">
                             <table id="sizes-tee" class="sizes-table" style="display:none;">
                                 <tr>
                                     <th></th>
-                                    <th>Довжина</th>
-                                    <th>Обхват грудей</th>
-                                    <th>Ширина плечей</th>
+                                    <th>Length</th>
+                                    <th>Chest</th>
+                                    <th>Shoulders</th>
                                 </tr>
                             </table>
 
                             <table id="sizes-shorts" class="sizes-table" style="display:none;">
                                 <tr>
                                     <th></th>
-                                    <th>Довжина</th>
-                                    <th>Талія</th>
-                                    <th>Стегна</th>
+                                    <th>Length</th>
+                                    <th>Waist</th>
+                                    <th>Hips</th>
                                 </tr>
                             </table>
 
                             <table id="sizes-tank" class="sizes-table" style="display:none;">
                                 <tr>
                                     <th></th>
-                                    <th>Довжина</th>
-                                    <th>Ширина</th>
-                                    <th>Плечі</th>
+                                    <th>Length</th>
+                                    <th>Width</th>
+                                    <th>Shoulders</th>
                                 </tr>
                             </table>
-
-
                         </div>
                     </div>
                     <div class="item-details">
                         <div class="item-details-title noto-sans-item-details-title">
-                            <p>Як замовити</p>
+                            <p>How to order</p>
                             <img src="/img/arrow.svg" alt="">
                         </div>
                         <div class="item-details-content noto-sans-item-details-content">
-                            <p>На даний момент усі замовлення приймаються виключно через <a
-                                    href="https://t.me/kirito_ls" target="_blank">Telegram</a> або в <a
+                            <p>At the moment, all orders are accepted exclusively via <a
+                                    href="https://t.me/kirito_ls" target="_blank">Telegram</a> or in <a
                                     href="https://www.instagram.com/kirito_sneakers?igsh=MTB1bzNheTJoaXZvMg%3D%3D&amp;utm_source=qr"
-                                    target="_blank">директ Instagram</a>.</p>
+                                    target="_blank">Instagram Direct</a>.</p>
                         </div>
                     </div>
                     <div class="item-details">
                         <div class="item-details-title noto-sans-item-details-title">
-                            <p>Доставка</p>
+                            <p>Delivery</p>
                             <img src="/img/arrow.svg" alt="">
                         </div>
                         <div class="item-details-content noto-sans-item-details-content">
-                            <p>Безкоштовна доставка по всьому світу.</p><br>
-                            <p>Доставка до відділення Нової пошти в Україні — від 70 грн.</p><br>
-                            <p>Оформлення замовлення триває від 12 до 14 робочих днів.</p>
+                            <p>Free worldwide shipping.</p><br>
+                            <p>Delivery to Nova Poshta branch in Ukraine — from 70 UAH.</p><br>
+                            <p>Order processing takes 12 to 14 business days.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="same-products-container">
-            <h2 class="noto-sans-h2">Інші кольори цієї моделі</h2>
+            <h2 class="noto-sans-h2">Other colors of this model</h2>
             <div class="cards-container" id="another-colors"></div>
         </section>
 
         <section class="like-products-container">
-            <h2 class="noto-sans-h2">Вам може сподобатись</h2>
+            <h2 class="noto-sans-h2">You may also like</h2>
             <div class="cards-container" id="another-colors"></div>
         </section>
-
     </main>
+
     <div id="img-modal" class="img-modal">
         <span class="close">&times;</span>
         <div class="zoom-swiper swiper">
             <div id="modal-swiper-wrapper" class="swiper-wrapper">
-                <!-- Слайды динамически создаются -->
+                <!-- Slides are generated dynamically -->
             </div>
-            <!-- Добавляем сюда пагинацию и стрелки для zoomSwiper -->
             <div class="swiper-pagination"></div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
