--- a/us.html
+++ b/us.html
@@ -30,9 +30,9 @@
                 </li>
                 <li id="us-delivery">
                     <h2 class="noto-sans-dd-title">Оплата</h2> 
-                    <p>Ми працюємо за повною передплатою, однак можлива також оплата частинами — уточнюйте умови у <a href="https://t.me/kirito_ls" target="_blank">менеджера</a>. Це пов’язано з тим, що наш асортимент включає велику кількість моделей, кольорів і розмірів, а також із обмеженими фінансовими можливостями для закупівель великих партій товару.</p>
-                    <p>У деяких випадках певні позиції можуть бути доступні з оплатою при отриманні — такі товари ми публікуємо окремо в <a href="https://t.me/kirito_sneakers" target="_blank">Telegram-каналі</a></p>
-                    <p>На даний момент усі замовлення приймаються виключно через <a href="https://t.me/kirito_ls" target="_blank">Telegram</a> або в <a href="https://www.instagram.com/kirito_sneakers?igsh=MTB1bzNheTJoaXZvMg%3D%3D&amp;utm_source=qr" target="_blank">директ Instagram</a>.</p>
+                    <p>Ми працюємо за повною передплатою, однак можлива також оплата частинами — уточнюйте умови у <a target="_blank" href="https://t.me/kirito_ls" target="_blank">менеджера</a>. Це пов’язано з тим, що наш асортимент включає велику кількість моделей, кольорів і розмірів, а також із обмеженими фінансовими можливостями для закупівель великих партій товару.</p>
+                    <p>У деяких випадках певні позиції можуть бути доступні з оплатою при отриманні — такі товари ми публікуємо окремо в <a target="_blank" href="https://t.me/kirito_sneakers" target="_blank">Telegram-каналі</a></p>
+                    <p>На даний момент усі замовлення приймаються виключно через <a target="_blank" href="https://t.me/kirito_ls" target="_blank">Telegram</a> або в <a target="_blank" href="https://www.instagram.com/kirito_sneakers?igsh=MTB1bzNheTJoaXZvMg%3D%3D&amp;utm_source=qr" target="_blank">директ Instagram</a>.</p>
                 </li>
                 <li id="us-order">
                     <h2 class="noto-sans-dd-title">Доставка</h2>
